--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
   font-family: 'vt323', monospace;
 }
 
 /*  Navbar starts */
 .navbar {
   position: fixed;
+  top: 0;
   z-index: 199;
   width: 100%;
   height: auto;
@@ -21,7 +23,7 @@
 .navbar .navbar-wrapper {
   display: flex;
   width: 90%;
-  height: 60px;
+  height: 90px;
   margin: 0 auto;
   justify-content: space-around;
 }
@@ -40,24 +42,27 @@
 }
 .navbar .navbar-wrapper .right i {
   display: none;
+  color: #fff;
 }
 .navbar .navbar-wrapper .right {
   width: 55%;
-  height: 60px;
+  height: 90px;
 }
 .navbar .navbar-wrapper .right ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 60px;
+  height: 90px;
   list-style: none;
   width: 100%;
+  transition: ease-in-out 0.5s;
 }
 .navbar .navbar-wrapper .right ul li a {
   text-decoration: none;
   font-size: 20px;
   color: #fff;
 }
+
 /*  Navbar Ends */
 
 /* Index starts */
@@ -68,7 +73,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  background-size: cover;
+
   width: 100%;
 }
 .welcomer .welcomer-wrapper {
@@ -484,169 +489,48 @@
 /* mobile starts */
 /* For 640 Resolution */
 @media only screen and (min-device-width: 320px) and (max-device-width: 767px) {
-  /* NAVBAR STARTS */
-
   .navbar {
-    margin-top: 0;
-    position: absolute;
-    left: -100%;
-    transition: ease-in-out 0.7s;
-    z-index: 99;
+    position: fixed;
+    z-index: 199;
+    top: 0;
   }
-  .navbar .links {
-    height: 100vh;
+  .navbar .navbar-wrapper {
     width: 100%;
   }
-  .navbar .links ul {
+  .navbar .navbar-wrapper .left {
+    border: 1px solid white;
+    width: 25%;
+  }
+  .navbar .navbar-wrapper .left #name {
+    font-size: 24px;
+  }
+
+  .navbar .navbar-wrapper .right {
+    width: 60%;
+    border: 1px solid white;
+  }
+
+  .welcomer {
+    background-size: cover;
     width: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    background-color: rgba(0, 0, 0, 0.95);
-    left: 0%;
-    height: 100vh;
   }
-  .navbar .links i {
-    display: inline;
-    margin: 0 auto;
-    margin-top: 30px;
-    color: #fff;
-    font-size: 44px;
-    z-index: 99;
-  }
-  .navbar .links ul li {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding-left: 35%;
-    margin-top: 25px;
-    margin-left: 50px;
-  }
-  .navbar.active {
-    left: 0;
-  }
-  #btnMenu {
-    z-index: 99;
-  }
-  #btnMenu i {
-    font-size: 34px;
-  }
-
-  /* NAVBAR ENDS */
-
-  /* INDEX STARTS */
-
-  /* INDEX ENDS */
-}
-
-/* mobile ends */
-@media (min-device-width: 741px) {
-  #btnMenu {
-    display: none;
+  .welcomer .welcomer-wrapper {
+    width: 60%;
   }
 }
 
 /* tablet starts */
-@media only screen and (min-device-width: 767px) and (max-device-width: 1023px) {
-  /* NAVBAR STARTS */
-  #btnMenu {
-    display: inline;
-  }
-  .navbar {
-    margin-top: 0;
-    position: absolute;
-    left: -100%;
-    transition: ease-in-out 0.7s;
-    z-index: 99;
-  }
-  .navbar .links {
-    height: 100vh;
-    width: 100%;
-  }
-  .navbar .links ul {
-    width: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    align-self: center;
-    background-color: rgba(0, 0, 0, 0.95);
-    left: 0%;
-    height: 100vh;
-  }
-  .navbar .links i {
-    display: inline;
-    margin: 0 auto;
-    position: relative;
-    top: 5%;
-    color: #fff;
-    font-size: 44px;
-    z-index: 99;
-  }
-  .navbar .links ul li {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    align-items: center;
-    margin-top: 25px;
-  }
-  .navbar.active {
-    left: 0;
-  }
-  #btnMenu {
-    z-index: 99;
-  }
-  #btnMenu i {
-    font-size: 34px;
-  }
-
-  /* NAVBAR ENDS */
-
-  /* INDEX STARTS */
-
-  /* INDEX ENDS */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1023px) {
 }
 /* tablet ends */
 
 /* laptop starts */
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1280px) {
-  .navbar {
-    margin-top: 10px;
-    position: fixed;
-  }
-  .navbar .links {
-    width: 100%;
-    margin: 0 auto;
-  }
-  .navbar .links ul {
-    width: 100%;
-    height: 50px;
-    margin: 0 auto;
-  }
-  .navbar .links ul li {
-    margin: 0 auto;
-  }
-  .navbar .links ul li a {
-    font-size: 24px;
-  }
 }
-
 /* laptop ends */
 
 /* desktop starts */
 @media only screen and (min-device-width: 1281px) and (max-device-width: 1440px) {
-  .navbar .links ul {
-    width: 75%;
-  }
-  .navbar .links ul li {
-    margin: 0 auto;
-  }
-  .navbar .links ul li a {
-    font-size: 25px;
-  }
-
   .welcomer .welcomer-wrapper {
     height: 80vh;
   }
