--- a/src/App.css
+++ b/src/App.css
@@ -247,42 +247,42 @@ nav .navbar-wrapper .right ul li a {
 }
 .about .about-wrapper {
   margin: 0;
-  position: absolute;
+  position: relative;
   top: 50%;
   transform: translateY(-50%);
 }
-.about .top {
+.about .about-wrapper .top {
   text-align: center;
   font-size: 54px;
   width: 20%;
   margin: 0 auto;
   letter-spacing: 8px;
 }
-.about .bottom {
+.about .about-wrapper .bottom {
   width: 95%;
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-.about .bottom .left img {
+.about .about-wrapper .bottom .left img {
   border-radius: 10%;
 }
-.about .bottom .right {
+.about .about-wrapper .bottom .right {
   width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   font-family: 'Poppins', sans-serif;
 }
-.about .bottom .right span {
+.about .about-wrapper .bottom .right span {
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   line-height: 30px;
 }
 
-.about .bottom .right #span1 {
+.about .about-wrapper .bottom .right #span1 {
   margin-bottom: 40px;
   font-weight: 400;
 }
@@ -472,6 +472,7 @@ nav .navbar-wrapper .right ul li a {
   width: 100%;
   height: 10vh;
   position: relative;
+  bottom: 0px;
   background-color: #191919;
   border-top: 1px solid #bebebe;
 }
@@ -504,7 +505,7 @@ nav .navbar-wrapper .right ul li a {
     position: absolute;
     top: 90px;
     left: -100%;
-    height: 400px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.95);
@@ -515,11 +516,77 @@ nav .navbar-wrapper .right ul li a {
 
   nav .navbar-wrapper .right i {
     text-align: right;
-    font-size: 52px;
+    font-size: 42px;
     margin-top: 25px;
   }
   nav .navbar-wrapper .right ul li a {
     font-size: 36px;
+  }
+  .welcomer .welcomer-wrapper {
+    width: 90%;
+    top: 25%;
+    height: 60vh;
+  }
+  .welcomer .welcomer-wrapper .top p {
+    font-size: 44px;
+    margin-bottom: 50px;
+    position: relative;
+  }
+  .welcomer .welcomer-wrapper .top span {
+    font-size: 44px;
+  }
+  .welcomer .welcomer-wrapper .mid span {
+    font-size: 30px;
+    line-height: 100px;
+  }
+  .welcomer .welcomer-wrapper .bottom button {
+    font-size: 34px;
+  }
+  .inter1 .inter1-wrapper span {
+    font-size: 28px;
+  }
+  .inter1 .inter1-wrapper a {
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+
+  .about {
+    height: 110vh;
+  }
+  .about .about-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .about .about-wrapper .top {
+    width: 80%;
+    margin-bottom: 25px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  }
+  .about .about-wrapper .top span {
+    text-align: center;
+    font-size: 34px;
+  }
+  .about .about-wrapper .bottom {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .about .about-wrapper .bottom .left {
+    display: flex;
+    justify-content: center;
+  }
+  .about .about-wrapper .bottom .left img {
+    width: 55%;
+  }
+  .about .about-wrapper .bottom .right {
+    margin-top: 20px;
+    width: 100%;
+  }
+  .about .about-wrapper .bottom .right span {
+    line-height: 25px;
   }
 }
 
