--- a/src/App.css
+++ b/src/App.css
@@ -180,7 +180,6 @@ nav .navbar-wrapper .right ul li a {
 }
 .inter2 .inter2-wrapper .bottom ul li a {
   color: rgba(237, 237, 237, 0.5);
-  border-bottom: 0px solid rgba(237, 237, 237, 0.5);
   transition: ease-in-out 0.5s;
 }
 .inter2 .inter2-wrapper .bottom ul li a:hover {
@@ -486,6 +485,13 @@ nav .navbar-wrapper .right ul li a {
   color: #fff;
   font-style: italic;
 }
+#wakeup {
+  position: fixed;
+  bottom: 0;
+  font-size: 14px;
+  z-index: 999;
+  color: #3ca04c;
+}
 
 /* Footer */
 
@@ -587,6 +593,71 @@ nav .navbar-wrapper .right ul li a {
   }
   .about .about-wrapper .bottom .right span {
     line-height: 25px;
+  }
+
+  .inter2 {
+    height: 25vh;
+  }
+  .inter2 .inter2-wrapper {
+    height: 25vh;
+  }
+  .inter2 .inter2-wrapper .top span {
+    font-size: 44px;
+  }
+  .inter2 .inter2-wrapper .bottom ul {
+    font-size: 44px;
+    justify-content: space-between;
+  }
+
+  .portfolio #title {
+    width: 100%;
+    font-size: 44px;
+    border-bottom: none;
+  }
+  .portfolio .portfolio-wrapper {
+    width: 100%;
+  }
+  .portfolio .portfolio-wrapper .repos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .portfolio .portfolio-wrapper .repos .card .card-title {
+    font-size: 30px;
+  }
+  .portfolio .portfolio-wrapper .repos .card .card-desc {
+    font-size: 14px;
+    line-height: 20px;
+    height: 140px;
+  }
+  .portfolio .portfolio-wrapper .repos .card .card-links a {
+    font-size: 16px;
+  }
+  .inter3 .inter3-wrapper .left span,
+  .inter3 .inter3-wrapper .right span,
+  .inter3 .inter3-wrapper .right a {
+    font-size: 24px;
+  }
+  .inter3 .inter3-wrapper .right {
+    text-align: center;
+  }
+  .contact .contact-wrapper {
+    width: 90%;
+    background-color: transparent;
+  }
+  .contact .contact-wrapper .contact-form,
+  .contact .contact-wrapper .contact-form form {
+    width: 100%;
+  }
+  .contact .contact-wrapper .contact-form form {
+    position: relative;
+  }
+  .contact .contact-wrapper .contact-form form button {
+    border: 1px solid white;
+    font-size: 24px;
+    position: relative;
+    width: 50%;
+    left: 0%;
   }
 }
 
