Adding styled-components

--- a/src/App.css
+++ b/src/App.css
@@ -111,7 +111,7 @@ nav .navbar-wrapper .right ul li a.active2 {
   color: #fff;
   font-size: 84px;
 }
-.welcomer .welcomer-wrapper .bottom button {
+/* .welcomer .welcomer-wrapper .bottom button {
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 54px;
@@ -124,7 +124,7 @@ nav .navbar-wrapper .right ul li a.active2 {
 .welcomer .welcomer-wrapper .bottom button:hover {
   background-color: #191919;
   color: #fff;
-}
+} */
 /* Index ends */
 
 /* Inter divler */
