--- a/src/App.css
+++ b/src/App.css
@@ -147,11 +147,11 @@ nav .navbar-wrapper .right ul li a.active2 {
   color: #fff;
   font-size: 50px;
 }
-.inter1 .inter1-wrapper a {
+/* .inter1 .inter1-wrapper a {
   color: rgb(190, 190, 190);
   transition: ease-in-out 0.5s;
   font-size: 50px;
-}
+} */
 .inter1 .inter1-wrapper a:hover {
   color: #fff;
 }
